--- a/nginx.yml
+++ b/nginx.yml
@@ -19,8 +19,8 @@ spec:
         - containerPort: 80
         resources:
             requests:
-                memory: "1Gi"
-                cpu: "500m"
+                memory: "100m"
+                cpu: "100m"
             limits:
-                memory: "1Gi"
-                cpu: "500m"
+                memory: "150m"
+                cpu: "100m"
