--- a/rq.yml
+++ b/rq.yml
@@ -9,7 +9,7 @@
       limits.memory: 2Gi
       persistentvolumeclaims: "4"
       pods: "20"
-      requests.cpu: 50M
-      requests.memory: 100M
+      requests.cpu: 50m
+      requests.memory: 100m
       requests.storage: 4Gi
       services.loadbalancers: "0"
