--- a/jenk.yml
+++ b/jenk.yml
@@ -23,3 +23,16 @@ volumeMounts:
       volumes:
         - name: jenkins-home
           emptyDir: {}
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins
+spec:
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+      nodePort: 44000
+  selector:
+    app: jenkins-app
